Moved error response to generated classes