@@ -1,7 +1,5 @@
 package space.gavinklfong.forex.exception;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.validation.FieldError;
 import org.springframework.validation.ObjectError;
@@ -10,8 +8,9 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.bind.support.WebExchangeBindException;
+import space.gavinklfong.forex.api.dto.ApiErrorMessage;
+import space.gavinklfong.forex.api.dto.ApiResponseErrorBody;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,59 +20,42 @@ public class RestExceptionHandler {
 	@ExceptionHandler({InvalidRequestException.class})
 	@ResponseStatus(HttpStatus.BAD_REQUEST)
 	@ResponseBody
-	public ErrorBody handleInvalidRequestException(InvalidRequestException ex) {
-	
-		List<ObjectError> errors = ex.getErrors();
-		List<ErrorMessage> errorMessages = errors.stream()
-		.map(error -> { 
-			if (error instanceof FieldError) {
-				FieldError fieldError = (FieldError) error;
-				return new ErrorMessage(fieldError.getField(), fieldError.getDefaultMessage());			
-			} else {
-				return new ErrorMessage(error.getCode(), error.getDefaultMessage());							
-			}
-		})
-		.collect(Collectors.toList());
-		
-		return new ErrorBody(errorMessages);
+	public ApiResponseErrorBody handleInvalidRequestException(InvalidRequestException ex) {
+		return handlExceptionWithObjectErrors(ex.getErrors());
 	}
 	
 	@ExceptionHandler({WebExchangeBindException.class})
 	@ResponseStatus(HttpStatus.BAD_REQUEST)
 	@ResponseBody
-	public ErrorBody handleWebExchangeBindException(WebExchangeBindException ex) {
-		
-		List<ObjectError> errors = ex.getAllErrors();
-		List<ErrorMessage> errorMessages = errors.stream()
-		.map(error -> { 
-			if (error instanceof FieldError) {
-				FieldError fieldError = (FieldError) error;
-				return new ErrorMessage(fieldError.getField(), fieldError.getDefaultMessage());			
-			} else {
-				return new ErrorMessage(error.getCode(), error.getDefaultMessage());							
-			}
-		})
-		.collect(Collectors.toList());
-		
-		return new ErrorBody(errorMessages);
+	public ApiResponseErrorBody handleWebExchangeBindException(WebExchangeBindException ex) {
+		return handlExceptionWithObjectErrors(ex.getAllErrors());
+	}
+
+	private ApiResponseErrorBody handlExceptionWithObjectErrors(List<ObjectError> errors) {
+		List<ApiErrorMessage> errorMessages = errors.stream()
+				.map(error -> {
+					if (error instanceof FieldError) {
+						FieldError fieldError = (FieldError) error;
+						return new ApiErrorMessage().code(fieldError.getField()).message(fieldError.getDefaultMessage());
+					} else {
+						return new ApiErrorMessage().code(error.getCode()).message(error.getDefaultMessage());
+					}
+				})
+				.collect(Collectors.toList());
+
+		return new ApiResponseErrorBody().errors(errorMessages);
 	}
 	
 	@ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
 	@ResponseBody
-	public ErrorBody handleInternalServerError(Exception ex) {
-		
-		List<ErrorMessage> errorMessages = Arrays.asList(new ErrorMessage("exception", ex.getMessage()));
-		
-		return new ErrorBody(errorMessages);
+	public ApiResponseErrorBody handleInternalServerError(Exception ex) {
+		return new ApiResponseErrorBody().errors(List.of(new ApiErrorMessage().code("exception").message(ex.getMessage())));
 	}
 
 	@ResponseStatus(HttpStatus.NOT_FOUND)
 	@ResponseBody
-	public ErrorBody handleNotFound(Exception ex) {
-		
-		List<ErrorMessage> errorMessages = Arrays.asList(new ErrorMessage("exception", "Resource Not Found"));
-
-		return new ErrorBody(errorMessages);
+	public ApiResponseErrorBody handleNotFound(Exception ex) {
+		return new ApiResponseErrorBody().errors(List.of(new ApiErrorMessage().code("exception").message("Resource Not Found")));
 	}
 
 }
